@@ -1,16 +1,19 @@
 O2 - XML db plugin (should use the same interface)
 	=> write the common db interface
 
-- 2 - Plugin system (exec ? ) --- Done, but to improve (dynamic loading, optional sandboxing, etc)
+- 2 - Plugin system (exec ? ) --- Done, but to improve (dynamic loading, etc)
 3 - Improve template system (transfer loop_exec in plugin, add include, var and if statements)
 - 4 - Improve Cookie system (to check)
 - 5 - Plugin for mongodb. (IMPROVE!!!!)
 6 - Make other dangerous attributes readonly
 7 - Add templating aliasing and output formatting through files
 8 - Improve wsgi/init.py files to output different type of files, with the correct content-type header
+9 - Implement IMPORT sandbox
 10 - IE and not-common browsers detection if content-type is application/xhtml+xml, replacing it with text/html if necessary
 13 - Add better doc strings for modules
 15 - Support for rewriting urls by database queries (useful for forums and blogs)
 and many other features (use a base class to avoid accessing to private attributes?)
+
+-- fix eval in __init__ script
 
 Coming version 2.0
